Fix errors and update properties

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
+<!DOCTYPE html>
 <html lang="en-us"><head>
+    <meta charset="utf-8">
     <title>Site Plan</title>
     <link type="text/css" rel="stylesheet" href="./site-plan.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   </head>
 
@@ -13,7 +16,7 @@
     </header>
     <main>
 
-      <!-- ------------------------Steps 2-3------------------------------ -->
+      <!--  Steps 2-3  -->
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
@@ -33,7 +36,7 @@
         Style Guide
       </h2>
 
-      <!-- ------------------------Steps 4-8------------------------------ -->
+      <!--  Steps 4-8  -->
 
       <h3>
         Color Palette
@@ -50,7 +53,7 @@
         <tr><td class="primary">[#396E94]</td><td class="secondary">[#E7C24F]</td><td class="accent1">[#A43312]</td><td class="accent2">[#381D2A]</td></tr>
       </tbody></table>
 
-      <!-- ------------------------Step 9------------------------------ -->
+      <!--  Step 9  -->
 
       <h3>
         Typography
@@ -76,7 +79,7 @@
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
       </p>
 
-      <!-- ------------------------Step 10------------------------------ -->
+      <!--  Step 10  -->
 
       <h3>
         Navigation
@@ -84,7 +87,7 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
-    <a class="navbar-brand keychainify-checked" href="index.html"><img src="assets/hyrezlogo.png" height="100px"></a>
+    <a class="navbar-brand keychainify-checked" href="index.html"><img src="assets/hyrezlogo.png" height="100" alt="header-logo"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -125,7 +128,7 @@
 
       </div>
 
-      <!-- --------Content Section -------------- -->
+      <!--  Content Section  -->
       <hr>
       <h2>
         Content
